--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
 gunicorn==20.0.4       # 必ず必要なので記載する
-flask==2.0.2
-requests==2.26.0
-numpy==1.19.2
-pandas==1.1.3
+flask==2.2.2 
+flask-session==0.6.0
+pandas==1.3.5
