--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 gunicorn==20.0.4       # 必ず必要なので記載する
-flask==2.2.2 
 flask-session==0.6.0
 pandas==1.3.5
 redis==3.5.3
-Werkzeug>=2.2.2
+Flask>=2.1.0
+werkzeug>=2.1.0
+
