--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 gunicorn==20.0.4       # 必ず必要なので記載する
 flask-session==0.6.0
-pandas==1.3.5
 redis==3.5.3
 Flask>=2.1.0
 werkzeug>=2.1.0
+numpy==1.23.5
+pandas==1.5.3
 
